# VieNeu-TTS.cpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build-local.ps1  run-v3-tts-test.ps1
.github/workflows/: release.yml
docs/: v3-native-cpp-pipeline.md
examples/audio_ref/: voice_clone_refs.json
scripts/: build-local.ps1  export-v3-acoustic-weights.py  export-v3-native-assets.py  package-runtime.ps1  prepare-v3-native-assets.ps1  run-v3-native-benchmark.ps1  run-v3-native-preset-benchmark.ps1  run-v3-native-voice-clone-benchmark.ps1  run-v3-tts-test.ps1  v3-native-benchmark-text.txt
src/backends/: llama_backend.cpp  llama_backend.h
src/codecs/: neucodec_onnx.cpp  neucodec_onnx.h
src/vieneu/: vieneu.cpp  vieneu.h  vieneu_progress.h  vieneu_tts.cpp  vieneu_tts.h  vieneu_v3_onnx.cpp  vieneu_v3_onnx.h
src/vieneu/v3_common/: v3_repetition_history.h
src/vieneu/v3_native/: v3_native_acoustic_ggml.cpp  v3_native_acoustic_ggml.h  v3_native_assets.cpp  v3_native_assets.h  v3_native_backbone_llama.cpp  v3_native_backbone_llama.h  v3_native_batch.cpp  v3_native_batch.h  v3_native_config.h  v3_native_moss_codec.cpp  v3_native_moss_codec.h  v3_native_prompt.cpp  v3_native_prompt.h  v3_native_reference.cpp  v3_native_reference.h  v3_native_sampler.cpp  v3_native_sampler.h  v3_native_stream.cpp  v3_native_stream.h  v3_native_tokenizer.cpp  v3_native_tokenizer.h  vieneu_v3_native.cpp  vieneu_v3_native.h
src/vieneu/v3_onnx/: vieneu_v3_onnx_acoustic_native.cpp  vieneu_v3_onnx_assets.cpp  vieneu_v3_onnx_audio.cpp  vieneu_v3_onnx_engine.cpp  vieneu_v3_onnx_inference.cpp  vieneu_v3_onnx_internal.h  vieneu_v3_onnx_sampling.cpp  vieneu_v3_onnx_tokenizer.cpp  vieneu_v3_onnx_utils.cpp  vieneu_v3_onnx_voice.cpp
tests/: abi-c.c  test_tokenizer_run.cpp  v3-native-chunking.cpp  vieneu-phonemizer.cpp
tools/: vieneu-tts-cli.cpp
